second website commit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="extra/css/style.css" rel="stylesheet" />
     <link href="extra/css/animate.css" rel="stylesheet" />
     <link rel="stylesheet" href="extra/fontawesome/css/all.css">
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 
     <!-- FONTAWESOME MAIN STYLE -->
     <!-- <link href="extra/css/" rel="stylesheet" /> -->
