small changes to animation

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 <body>
 	<div id="header" class="container-fluid">
 		<header>
-			<img id="icon" src="extra/images/icon.png">
-			<div class="title">
+			<img id="icon" class="animated fadeInDown" src="extra/images/icon.png">
+			<div class="title animated fadeInDown">
 				Thom Eng
 			</div>
-			<div class="description">
+			<div class="description animated fadeInDown">
 				Consultant | Designer | Builder | Creator
 			</div>
 		</header>
