--- a/signup.html
+++ b/signup.html
@@ -28,9 +28,9 @@
 
 <body>
     <div id="thankYouPage" class="container-fluid">
-        <img id="icon2" src="extra/images/icon.png">
-        <div id="thankYou"> THANKS FOR REACHING OUT!</div>
-        <div id="thankYouTag">Please check your inbox to confirm your email address!</div>
+        <img id="icon2" class="animated fadeInDown" src="extra/images/icon.png">
+        <div id="thankYou" class="animated fadeInDown">THANKS FOR REACHING OUT!</div>
+        <div id="thankYouTag" class="animated fadeInDown">Please check your inbox to confirm your email address!</div>
     </div>
 </body>
 
