--- a/confirmation.html
+++ b/confirmation.html
@@ -28,9 +28,9 @@
 
 <body>
     <div id="thankYouPage" class="container-fluid">
-        <img id="icon2" src="extra/images/icon.png">
-        <div id="thankYou"> THANKS FOR CONFIRMING YOUR EMAIL!</div>
-        <div id="thankYouTag">I promise I'll get back to you shortly :)</div>
+        <img id="icon2" class="animated fadeInDown" src="extra/images/icon.png">
+        <div id="thankYou" class="animated fadeInDown">THANKS FOR CONFIRMING YOUR EMAIL!</div>
+        <div id="thankYouTag" class="animated fadeInDown">I promise I'll get back to you shortly :)</div>
     </div>
 </body>
 
