--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 	<div id="header" class="container-fluid">
 		<header>
 			<img id="icon" class="animated fadeInDown" src="extra/images/icon.png">
-			<div class="title animated fadeInDown">
+			<div id="title" class="animated fadeInDown">
 				Thom Eng
 			</div>
-			<div class="description animated fadeInDown">
+			<div id="description" class="animated fadeInDown">
 				Consultant | Designer | Builder | Creator
 			</div>
 		</header>
