further formatting changes

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		<div class="row animated justify-content-md-center" id="menuItems">	
 			<div id="about" class="col-3 animated">ABOUT ME</div>
 			<div id="work" class="col-3 animated">WHAT I DO</div>
-			<div id="passions" class="col-3 animated">MY PASSIONS</div>
-			<div id="values" class="col-3 animated">MY VALUES</div>
+			<div id="passions" class="col-3 animated">PASSIONS</div>
+			<div id="values" class="col-3 animated">VALUES</div>
 		</div>
 		<div class="row animated justify-content-md-center" id="menuInfo">
 			<div id="aboutBox" class="animated">
@@ -201,6 +201,7 @@
 						<h4>DOGS</h4>
 						<div id="dogsWrapper">
 							<h4>DOGS</h4>
+							<a href="https://www.instagram.com/olliedood__/">
 							<div id="carousel" class="carousel slide" data-ride="carousel">
 								<div class="carousel-inner">
 									<div class="carousel-item active">
@@ -225,8 +226,9 @@
 									<span class="sr-only">Next</span>
 								</a>
 							</div>
+							</a>
 							<div id="dogsText">
-								Just look at this lil' boi!! (~courtesy of <a href="">mandypants</a>)
+								Just look at this lil' boi!! (~courtesy of <a href="https://www.instagram.com/mandypants__/">mandypants</a>)
 							</div>
 						</div>
 					</div>
@@ -312,23 +314,28 @@
 		<div id="contactBar">
 			<div id="contactIcons">
 				<div id="mail">	
-					<div id="mailIcon" class="far fa-envelope fa-lg animated fadeIn"></div>
+					<a href="mailto:thom.john.eng@gmail.com">
+					<div id="mailIcon" class="far fa-envelope fa-lg animated fadeIn"></div></a>
 					<div id="mailText">mail</div>
 				</div>
 				<div id="linkedIn">
-					<div id="linkedInIcon" class="fab fa-linkedin-in fa-lg animated"></div>
+					<a href="https://www.linkedin.com/in/thomas-eng-1953a755/">
+					<div id="linkedInIcon" class="fab fa-linkedin-in fa-lg animated"></div></a>
 					<div id="linkedInText">linkedin</div>
 				</div>
 				<div id="insta">
-					<div id="instaIcon" class="fab fa-instagram fa-lg animated"></div>
+					<a href="https://www.instagram.com/thom.john.eng/">
+					<div id="instaIcon" class="fab fa-instagram fa-lg animated"></div></a>
 					<div id="instaText">instagram</div>
 				</div>
 				<div id="fb">
-					<div id="fbIcon" class="fab fa-facebook-square fa-lg animated"></div>
+					<a href="https://www.facebook.com/tom.eng.18">
+					<div id="fbIcon" class="fab fa-facebook-square fa-lg animated"></div></a>
 					<div id="fbText">facebook</div>
 				</div>
 				<div id="resume">
-					<div id="resumeIcon" class="far fa-file fa-lg animated"></div>
+					<a href="extra/Thom_Eng_Resume_08_2019.pdf" download="Thom_Eng_Resume">
+					<div id="resumeIcon" class="far fa-file fa-lg animated" href=""></div></a>
 					<div id="resumeText">resume</div>
 				</div>
 			</div>
