--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								When I say design think raw, inspired, aesthetic & functional creation. From architecture to products all the way to graphic, there's nothing in the design world I'm not completely absorbed with. 
 							</p>
 							<p>
-								Check out these sick <u><b><a href="https://www.skinnyships.com/">designs</a></b></u> and this awesome <u><b><a href="https://www.tgoodman.com/">collection</a></b></u>, these <u><b><a href="https://www.theguardian.com/artanddesign/gallery/2019/may/17/in-pictures-im-peis-finest-works">works</a></b></u> by I. M. Pei, and this interesting <u><b><a href="https://fireart.studio/6-biggest-product-design-trends-in-2019/">thoughtpiece</a></b></u> on the latest product design trends.
+								Check out these sick <a href="https://www.skinnyships.com/">designs</a> and this awesome <a href="https://www.tgoodman.com/">collection</a>, these <a href="https://www.theguardian.com/artanddesign/gallery/2019/may/17/in-pictures-im-peis-finest-works">works</a> by I. M. Pei, and this interesting <a href="https://fireart.studio/6-biggest-product-design-trends-in-2019/">thoughtpiece</a> on the latest product design trends.
 							</p>
 						</div>
 					</div>
